--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,14 +31,13 @@
     ],
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-inferrable-types": "off",
-    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "block-spacing": ["warn", "always"],
     "curly": ["warn", "all"],
     "eol-last": "error",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
-    "max-lines-per-function": ["error", 50],
     "no-console": "off",
     "no-debugger": "off",
     "no-multiple-empty-lines": ["error", { "max": 2, "maxBOF": 0, "maxEOF": 1 }],
@@ -46,6 +45,7 @@
     "no-underscore-dangle": "off",
     "no-unused-vars": "off",
     "object-curly-spacing": ["warn", "always"],
-    "spaced-comment": ["error", "always", { "markers": ["!", "?", "//", "todo", "*"] }]
+    "spaced-comment": ["error", "always", { "markers": ["!", "?", "//", "todo", "*"] }],
+    "unicorn/new-for-builtins": "off"
   }
 }
